FIX: Added overflow hidden to the body

--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -12,6 +12,7 @@ html {
 body {
   font-size: rem(18px);
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1,
